sort.baseball.NaiveBaseball.scala.error
Compilation error:
NaiveBaseball:6: error: not enough arguments for method distance: (base: Int, n: Int)(Int, Int).
Unspecified value parameter n.
    distance(baseCandidate) match {
            ^NaiveBaseball:7: error: value < is not a member of Any
      case (d1,d2) => if (d1<d2) {
                            ^